# solar-k8s-modules

./: README.rst  requirements.txt  setup.cfg  setup.py
composer_files/: keystone.yaml  mariadb.yaml  mariadb_deployment.yaml  neutron.yaml  openstack.yaml  rabbitmq.yaml  transport.yaml
docker/ansible/: Dockerfile
k8s-modules/ConfigMap/0.0.1/: meta.yaml
k8s-modules/Deployment/0.0.1/: meta.yaml
k8s-modules/Deployment/0.0.1/actions/: run.yaml
k8s-modules/KeystoneConfigMap/0.0.1/: meta.yaml
k8s-modules/KeystoneConfigMap/0.0.1/actions/: run.yaml
k8s-modules/KeystoneConfigMap/0.0.1/configs/: keystone.conf  keystone.conf.jinja
k8s-modules/KeystoneDeployment/0.0.1/: meta.yaml
k8s-modules/KeystoneDeployment/0.0.1/actions/: run.yaml
k8s-modules/KeystoneService/0.0.1/: meta.yaml
k8s-modules/KeystoneService/0.0.1/actions/: run.yaml
k8s-modules/MariadbDeployment/0.0.1/actions/: run.yaml
k8s-modules/MariadbService/0.0.1/: meta.yaml
k8s-modules/MariadbService/0.0.1/actions/: run.yaml
k8s-modules/RabbitmqDeployment/0.0.1/actions/: run.yaml
k8s-modules/RabbitmqService/0.0.1/actions/: run.yaml
k8s-modules/transport_k8sjob/1.0.0/: meta.yaml
k8s/ConfigMap/0.0.1/: meta.yaml
k8s/ConfigMap/0.0.1/actions/: run.yaml
k8s/KeystoneConfigMap/0.0.1/: .meta.yaml.swp  meta.yaml
k8s/KeystoneConfigMap/0.0.1/actions/: run.yaml  (+1 more)
k8s/KeystoneDeployment/0.0.1/: meta.yaml
k8s/MariadbDeployment/0.0.1/: meta.yaml
k8s/RabbitmqDeployment/0.0.1/: meta.yaml
k8s/RabbitmqService/0.0.1/: meta.yaml
solar_k8s/: jsondiff.py  k8s_handler.py  k8s_job_transport.py
(+8 files in other folders)
