[metadata]
name = solar-k8s-modules
version = 0.0.1
author = Mirantis Inc.
author-email = product@mirantis.com
summary = Deployment tool
description-file = README.rst
license = Apache-2
home-page = http://mirantis.com
classifier =
     Development Status :: 4 - Beta
     License :: OSI Approved :: Apache Software License
     Programming Language :: Python
     Programming Language :: Python :: 2.7
     Topic :: System :: Software Distribution
keywords =
    deployment

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[entry_points]
solar.handlers =
    k8s = solar_k8s.k8s_handler:K8S
solar.transports.sync =
    k8s_job = solar_k8s.k8s_job_transport:K8SJobSyncTransport
solar.transports.run =
    k8s_job = solar_k8s.k8s_job_transport:K8SJobRunTransport
